// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusChip should display label with default color (no value) 1`] = `
.emotion-0 {
  max-width: 100%;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-size: 0.8125rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 32px;
  color: rgba(0, 0, 0, 0.87);
  background-color: rgba(0, 0, 0, 0.08);
  border-radius: 16px;
  white-space: nowrap;
  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  cursor: unset;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  padding: 0;
  vertical-align: middle;
  box-sizing: border-box;
  height: 24px;
  background-color: transparent;
  border: 1px solid #bdbdbd;
  border-radius: 5px;
  background-color: rgba(0, 0, 0, 0.08);
}

.emotion-0.Mui-disabled {
  opacity: 0.38;
  pointer-events: none;
}

.emotion-0 .MuiChip-avatar {
  margin-left: 5px;
  margin-right: -6px;
  width: 24px;
  height: 24px;
  color: #616161;
  font-size: 0.75rem;
}

.emotion-0 .MuiChip-avatarColorPrimary {
  color: #fff;
  background-color: #1565c0;
}

.emotion-0 .MuiChip-avatarColorSecondary {
  color: #fff;
  background-color: #7b1fa2;
}

.emotion-0 .MuiChip-avatarSmall {
  margin-left: 4px;
  margin-right: -4px;
  width: 18px;
  height: 18px;
  font-size: 0.625rem;
}

.emotion-0 .MuiChip-icon {
  margin-left: 5px;
  margin-right: -6px;
}

.emotion-0 .MuiChip-deleteIcon {
  -webkit-tap-highlight-color: transparent;
  color: rgba(0, 0, 0, 0.26);
  font-size: 22px;
  cursor: pointer;
  margin: 0 5px 0 -6px;
}

.emotion-0 .MuiChip-deleteIcon:hover {
  color: rgba(0, 0, 0, 0.4);
}

.emotion-0 .MuiChip-icon {
  font-size: 18px;
  margin-left: 4px;
  margin-right: -4px;
}

.emotion-0 .MuiChip-deleteIcon {
  font-size: 16px;
  margin-right: 4px;
  margin-left: -4px;
}

.emotion-0 .MuiChip-icon {
  color: #616161;
}

.emotion-0.MuiChip-clickable:hover {
  background-color: rgba(0, 0, 0, 0.04);
}

.emotion-0.Mui-focusVisible {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-0 .MuiChip-avatar {
  margin-left: 4px;
}

.emotion-0 .MuiChip-avatarSmall {
  margin-left: 2px;
}

.emotion-0 .MuiChip-icon {
  margin-left: 4px;
}

.emotion-0 .MuiChip-iconSmall {
  margin-left: 2px;
}

.emotion-0 .MuiChip-deleteIcon {
  margin-right: 5px;
}

.emotion-0 .MuiChip-deleteIconSmall {
  margin-right: 3px;
}

.emotion-1 {
  overflow: hidden;
  text-overflow: ellipsis;
  padding-left: 12px;
  padding-right: 12px;
  white-space: nowrap;
  padding-left: 11px;
  padding-right: 11px;
  padding-left: 8px;
  padding-right: 8px;
  padding-left: 7px;
  padding-right: 7px;
}

<div>
  <div
    class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault  emotion-0"
  >
    <span
      class="MuiChip-label MuiChip-labelSmall  emotion-1"
    >
      fake-label
    </span>
  </div>
</div>
`;

exports[`StatusChip should display label with default color 1`] = `
.emotion-0 {
  max-width: 100%;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-size: 0.8125rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 32px;
  color: rgba(0, 0, 0, 0.87);
  background-color: rgba(0, 0, 0, 0.08);
  border-radius: 16px;
  white-space: nowrap;
  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  cursor: unset;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  padding: 0;
  vertical-align: middle;
  box-sizing: border-box;
  height: 24px;
  background-color: transparent;
  border: 1px solid #bdbdbd;
  border-radius: 5px;
  background-color: rgba(0, 0, 0, 0.08);
}

.emotion-0.Mui-disabled {
  opacity: 0.38;
  pointer-events: none;
}

.emotion-0 .MuiChip-avatar {
  margin-left: 5px;
  margin-right: -6px;
  width: 24px;
  height: 24px;
  color: #616161;
  font-size: 0.75rem;
}

.emotion-0 .MuiChip-avatarColorPrimary {
  color: #fff;
  background-color: #1565c0;
}

.emotion-0 .MuiChip-avatarColorSecondary {
  color: #fff;
  background-color: #7b1fa2;
}

.emotion-0 .MuiChip-avatarSmall {
  margin-left: 4px;
  margin-right: -4px;
  width: 18px;
  height: 18px;
  font-size: 0.625rem;
}

.emotion-0 .MuiChip-icon {
  margin-left: 5px;
  margin-right: -6px;
}

.emotion-0 .MuiChip-deleteIcon {
  -webkit-tap-highlight-color: transparent;
  color: rgba(0, 0, 0, 0.26);
  font-size: 22px;
  cursor: pointer;
  margin: 0 5px 0 -6px;
}

.emotion-0 .MuiChip-deleteIcon:hover {
  color: rgba(0, 0, 0, 0.4);
}

.emotion-0 .MuiChip-icon {
  font-size: 18px;
  margin-left: 4px;
  margin-right: -4px;
}

.emotion-0 .MuiChip-deleteIcon {
  font-size: 16px;
  margin-right: 4px;
  margin-left: -4px;
}

.emotion-0 .MuiChip-icon {
  color: #616161;
}

.emotion-0.MuiChip-clickable:hover {
  background-color: rgba(0, 0, 0, 0.04);
}

.emotion-0.Mui-focusVisible {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-0 .MuiChip-avatar {
  margin-left: 4px;
}

.emotion-0 .MuiChip-avatarSmall {
  margin-left: 2px;
}

.emotion-0 .MuiChip-icon {
  margin-left: 4px;
}

.emotion-0 .MuiChip-iconSmall {
  margin-left: 2px;
}

.emotion-0 .MuiChip-deleteIcon {
  margin-right: 5px;
}

.emotion-0 .MuiChip-deleteIconSmall {
  margin-right: 3px;
}

.emotion-1 {
  overflow: hidden;
  text-overflow: ellipsis;
  padding-left: 12px;
  padding-right: 12px;
  white-space: nowrap;
  padding-left: 11px;
  padding-right: 11px;
  padding-left: 8px;
  padding-right: 8px;
  padding-left: 7px;
  padding-right: 7px;
}

<div>
  <div
    class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault  emotion-0"
  >
    <span
      class="MuiChip-label MuiChip-labelSmall  emotion-1"
    >
      fake-label
    </span>
  </div>
</div>
`;

exports[`StatusChip should display label with error color 1`] = `
.emotion-0 {
  max-width: 100%;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-size: 0.8125rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 32px;
  color: rgba(0, 0, 0, 0.87);
  background-color: rgba(0, 0, 0, 0.08);
  border-radius: 16px;
  white-space: nowrap;
  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  cursor: unset;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  padding: 0;
  vertical-align: middle;
  box-sizing: border-box;
  height: 24px;
  background-color: #d32f2f;
  color: #fff;
  background-color: transparent;
  border: 1px solid #bdbdbd;
  color: #d32f2f;
  border: 1px solid rgba(211, 47, 47, 0.7);
  border-radius: 5px;
  background-color: #d32f2f60;
}

.emotion-0.Mui-disabled {
  opacity: 0.38;
  pointer-events: none;
}

.emotion-0 .MuiChip-avatar {
  margin-left: 5px;
  margin-right: -6px;
  width: 24px;
  height: 24px;
  color: #616161;
  font-size: 0.75rem;
}

.emotion-0 .MuiChip-avatarColorPrimary {
  color: #fff;
  background-color: #1565c0;
}

.emotion-0 .MuiChip-avatarColorSecondary {
  color: #fff;
  background-color: #7b1fa2;
}

.emotion-0 .MuiChip-avatarSmall {
  margin-left: 4px;
  margin-right: -4px;
  width: 18px;
  height: 18px;
  font-size: 0.625rem;
}

.emotion-0 .MuiChip-icon {
  margin-left: 5px;
  margin-right: -6px;
}

.emotion-0 .MuiChip-deleteIcon {
  -webkit-tap-highlight-color: transparent;
  color: rgba(0, 0, 0, 0.26);
  font-size: 22px;
  cursor: pointer;
  margin: 0 5px 0 -6px;
}

.emotion-0 .MuiChip-deleteIcon:hover {
  color: rgba(0, 0, 0, 0.4);
}

.emotion-0 .MuiChip-icon {
  font-size: 18px;
  margin-left: 4px;
  margin-right: -4px;
}

.emotion-0 .MuiChip-deleteIcon {
  font-size: 16px;
  margin-right: 4px;
  margin-left: -4px;
}

.emotion-0 .MuiChip-deleteIcon {
  color: rgba(255, 255, 255, 0.7);
}

.emotion-0 .MuiChip-deleteIcon:hover,
.emotion-0 .MuiChip-deleteIcon:active {
  color: #fff;
}

.emotion-0 .MuiChip-icon {
  color: #616161;
}

.emotion-0 .MuiChip-icon {
  color: inherit;
}

.emotion-0.MuiChip-clickable:hover {
  background-color: rgba(0, 0, 0, 0.04);
}

.emotion-0.Mui-focusVisible {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-0 .MuiChip-avatar {
  margin-left: 4px;
}

.emotion-0 .MuiChip-avatarSmall {
  margin-left: 2px;
}

.emotion-0 .MuiChip-icon {
  margin-left: 4px;
}

.emotion-0 .MuiChip-iconSmall {
  margin-left: 2px;
}

.emotion-0 .MuiChip-deleteIcon {
  margin-right: 5px;
}

.emotion-0 .MuiChip-deleteIconSmall {
  margin-right: 3px;
}

.emotion-0.MuiChip-clickable:hover {
  background-color: rgba(211, 47, 47, 0.04);
}

.emotion-0.Mui-focusVisible {
  background-color: rgba(211, 47, 47, 0.12);
}

.emotion-0 .MuiChip-deleteIcon {
  color: rgba(211, 47, 47, 0.7);
}

.emotion-0 .MuiChip-deleteIcon:hover,
.emotion-0 .MuiChip-deleteIcon:active {
  color: #d32f2f;
}

.emotion-1 {
  overflow: hidden;
  text-overflow: ellipsis;
  padding-left: 12px;
  padding-right: 12px;
  white-space: nowrap;
  padding-left: 11px;
  padding-right: 11px;
  padding-left: 8px;
  padding-right: 8px;
  padding-left: 7px;
  padding-right: 7px;
}

<div>
  <div
    class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorError MuiChip-outlinedError  emotion-0"
  >
    <span
      class="MuiChip-label MuiChip-labelSmall  emotion-1"
    >
      fake-label
    </span>
  </div>
</div>
`;
